--- a/demo/src/main/res/layout/activity_main.xml
+++ b/demo/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         android:layout_height="wrap_content"
         app:layout_behavior="eu.long1.spacetablayout.SpaceTabLayoutBehavior"
         app:number_of_tabs="five"
-        app:starting_position="one" />
+        app:starting_position="one"
+        />
 
 </android.support.design.widget.CoordinatorLayout>
