--- a/spacetablayout/src/main/res/drawable/background.xml
+++ b/spacetablayout/src/main/res/drawable/background.xml
@@ -21,6 +21,6 @@
     android:viewportWidth="230.0">
     <path
         android:fillAlpha="1"
-        android:fillColor="#3f51b5"
+        android:fillColor="#FF0000"
         android:pathData="m115,-0.011c-5.111,0.138 -10.202,1.214 -14.918,3.253 -1.934,0.836 -7.159,4.23 -11.613,7.543 -8.944,6.652 -14.154,9.365 -20.107,10.471 -2.682,0.498 -24.646,0.733 -68.361,0.733l115,-0.074 115,0.074c-43.715,0 -65.679,-0.235 -68.361,-0.733 -5.953,-1.106 -11.163,-3.819 -20.107,-10.471 -4.454,-3.312 -9.679,-6.707 -11.613,-7.543 -4.716,-2.039 -9.807,-3.115 -14.918,-3.253z" />
 </vector>
